@startuml

left to right direction

class Print {
- id: int
- type: PrintType
- state: PrintState
- number: int
- number_after_slash: int
- name: string
- name_full: string

- law_proposer_type: string
- authority: Authority
- authority_election_term: Authority
- proposers: Proposer[]

- date_of_propose: Date
- date_of_deliver: DateTime
- date_of_next_discussion: DateTime
- discussion_date_change: int
- is_fast_proposal: boolean
- is_eu: boolean
- with_wote_of_no_confidence: boolean

- date_of_e_version: Date
- url: string

- state: int
__
}

class PrintType {
- id: int
- name: string
- name_abbr: string
}

class PrintState{
- id: int
- state_type: PrintStateType
- print_type: PrintType
- description: string
- days_until_next_discussion: int
}

class PrintStateType{
- id: int
- description: string
}

class PrintTransition{
- id: int
- from_state: PrintState
- to_state: PrintState
- action: PrintTransitionType
}

class PrintTransitionType{
- id: int
- description: string
}

class Proposer {
- id: int
- print: Print
- person: Person
- index: int
- type: int
- proposer_type: string
}

class PropositionHistory{
- id: int
- print: Print
- date: Date
- voting: Voting
- transition: PrintTransition
- meeting_point: MeetingPoint
- meeting_number: int
- act_number: int
- responsible_person_by_council: MemberOfParliament
- responsible_by_chairman: MemberOfParliament
- act_number_council: int
- date_of_publication: Date
- publication_number: int
- notes: String
}

class PrintResult{
- id: int
- description: string
}

class PrintDependent{
- id: int
- type: PrintType
- number_after_slash: int
- proposition_history: PropositionHistory
- name: string
- name_full: string
- number: int
- authority: Authority
- act_number_council: int/string
- responsible_person: MemberOfParliament
- date_of_propose: Date
- date_of_deliver: Date
- is_sorted: boolean
- url: string
- result: PrintResult
- state: int
}

class CouncilHistory {
- print: Print
- authority: Authority
- type: int
- proposition_history: PropositionHistory
- responsible_person: MemberOfParliament
- index: int
}

Print "*" --> "1" PrintType : type >
Print "*" --> "1" PrintState : state >
PrintState "*" --> "1" PrintStateType : state_type >
PrintState "*" --> "1" PrintType : print_type >
PrintTransition "*" --> "1" PrintState : from_state >
PrintTransition "*" --> "1" PrintState : to_state >
PrintTransition "*" --> "1" PrintTransitionType
Person <--> Proposer
Print <-- Proposer
Print <-- PropositionHistory
PropositionHistory --> Voting
PropositionHistory --> PrintTransition
PropositionHistory --> MeetingPoint
PropositionHistory --> MemberOfParliament : responsible_person_by_council
PropositionHistory --> MemberOfParliament : responsible_person_by_chairman
PrintDependent --> PrintType
PrintDependent --> PropositionHistory
PrintDependent --> Authority
PrintDependent --> MemberOfParliament : responsible_person
PrintDependent --> PrintResult
Print <-- CouncilHistory
CouncilHistory --> Authority
CouncilHistory --> PropositionHistory
CouncilHistory --> MemberOfParliament
@enduml
